--- a/lightit-webapp/src/main/angular/lightit-webapp/src/index.html
+++ b/lightit-webapp/src/main/angular/lightit-webapp/src/index.html
@@ -1,13 +1,36 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>LightitWebapp</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+	<meta charset="utf-8" />
+
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+	<link rel="apple-touch-icon" sizes="76x76" href="../assets/img/apple-icon.png">
+  	<link rel="icon" type="image/png" href="../assets/img/favicon.png">
+
+	<title>Light It</title>
+	<base href="/">
+	
+	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons" />
+  	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css">
+	<link href="assets/css/material-dashboard.css?v=2.1.0" rel="stylesheet" />
 </head>
-<body>
-  <app-root></app-root>
+<body class="dark-edition">
+	<div class="wrapper">
+		<div>
+			<div class="content" style="padding: 80px 39px;">
+				<div class="container-fluid">
+					<app-root></app-root>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<script src="assets/js/core/jquery.min.js"></script>
+	<script src="assets/js/core/popper.min.js"></script>
+	<script src="assets/js/core/bootstrap-material-design.min.js"></script>
+	<script src="https://unpkg.com/default-passive-events"></script>
+	<script async defer src="https://buttons.github.io/buttons.js"></script>
+	<script src="assets/js/material-dashboard.js?v=2.1.0"></script>
 </body>
 </html>
