--- a/bublight-webapp/src/main/vue/bublight-webapp/public/index.html
+++ b/bublight-webapp/src/main/vue/bublight-webapp/public/index.html
@@ -31,6 +31,7 @@
 	<script async defer src="https://buttons.github.io/buttons.js"></script>
 	<script src="assets/js/color-picker.js"></script>
 	<script src="assets/js/switchery.min.js"></script>
+	<script src="assets/js/bootstrap-notify.js"></script>
 	<script src="assets/js/material-dashboard.js?v=2.1.0"></script>
 </body>
 </html>
